# forge_config

./: .bazelignore  .bazelrc  .gitignore  BAZEL.md  LICENSE  MODULE.bazel  README.md  build-and-test.sh  docker-compose.dev.yml  docker-compose.rust.yml  docker-compose.yml  openapi.yaml  test-api.sh
backend-rust/: BUILD.bazel  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
backend-rust/migrations/: 001_initial_schema.sql  002_add_cable_length.sql  002_jobs.sql  003_cleanup_orphaned_ips.sql  003_topologies.sql  004_device_variables.sql  004_settings_topology_defaults.sql  005_groups.sql  005_vendor_group_names.sql  006_ipam.sql  006_rack_dimensions.sql  007_ipam_vrfs.sql  007_jobs_triggered_by.sql  008_ipam_multi_roles.sql  009_device_id.sql  010_device_models.sql  011_ipam_prefix_roles.sql  012_ipam_prefix_int_id.sql  013_vendor_action_webhooks.sql  014_jobs_nullable_device.sql  015_device_type.sql  016_port_assignments.sql  017_job_templates.sql  018_patch_panels.sql  019_location_hierarchy.sql  020_credentials.sql  021_integer_device_id.sql  022_port_vrf.sql  023_output_parsers.sql  024_user_management.sql  025_device_roles.sql  026_device_role_groups.sql  027_group_integer_ids.sql  028_vendor_diff_command.sql  029_vendor_diff_command_defaults.sql  030_foundation_int_ids.sql  031_vendor_ecosystem_int_ids.sql  032_ipam_locations_int_ids.sql  033_ipam_role_vrf_int_ids.sql  034_remaining_int_ids.sql  (+1 more)
backend-rust/scripts/: dhcp-notify.sh
backend-rust/src/: auth.rs  main.rs  router.rs
backend-rust/src/backup/: mod.rs
backend-rust/src/config/: mod.rs
backend-rust/src/db/: credentials.rs  device_models.rs  device_roles.rs  device_variables.rs  devices.rs  dhcp_options.rs  discovery.rs  gpu_clusters.rs  groups.rs  ipam.rs  job_templates.rs  jobs.rs  mod.rs  output_parsers.rs  port_assignments.rs  row_helpers.rs  seeds.rs  settings.rs  store_ipam.rs  templates.rs  tenants.rs  topologies.rs  users.rs  variable_resolution.rs  vendor_actions.rs  vendors.rs
backend-rust/src/db/ipam/: helpers.rs  ip_addresses.rs  locations.rs  mod.rs  prefixes.rs  vrfs.rs
backend-rust/src/dhcp/: config.rs  leases.rs  mod.rs
backend-rust/src/handlers/: auth.rs  backups.rs  benchmarks.rs  configs.rs  credentials.rs  device_models.rs  device_roles.rs  device_variables.rs  devices.rs  dhcp_options.rs  discovery.rs  docker.rs  gpu_clusters.rs  groups.rs  ipam.rs  job_templates.rs  jobs.rs  mod.rs  netbox.rs  output_parsers.rs  port_assignments.rs  settings.rs  templates.rs  tenants.rs  topologies.rs  users.rs  vendors.rs  ws_broadcast.rs
backend-rust/src/handlers/docker/: clos_lab.rs  containers.rs  helpers.rs  mod.rs  three_tier.rs  virtual_clos.rs
backend-rust/src/jobs/: mod.rs
backend-rust/src/models/: auth.rs  device_models.rs  device_roles.rs  devices.rs  discovery.rs  gpu_cluster.rs  groups.rs  ipam.rs  jobs.rs  mod.rs  output_parsers.rs  port_assignments.rs  settings.rs  templates.rs  tenant.rs  topology.rs  vendors.rs
backend-rust/src/netbox/: client.rs  mod.rs  sync.rs  types.rs
backend-rust/src/services/: lease_handler.rs  mod.rs
backend-rust/src/status/: mod.rs
backend-rust/src/utils/: mod.rs
backend-rust/src/ws/: mod.rs
bazel/: .bazelignore  .bazelrc  .npmrc  BUILD.bazel  CHEATSHEET.md  MODULE.bazel  README.md
bazel/backend-rust/: BUILD.bazel
bazel/frontend/: BUILD.bazel
bazel/shared/core/: BUILD.bazel
data/: forge-config.db  ztp.db
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ActionMenu.tsx  ApiHistory.tsx  Button.tsx  Card.tsx  ChassisPreview.tsx  Checkbox.tsx  CodeGeneratorDialog.tsx  CommandDrawer.tsx  ConfigManagement.tsx  ConfigViewer.tsx  ConfirmDialog.tsx  ConnectModal.tsx  CopyButton.tsx  CredentialsPanel.tsx  CronScheduleInput.tsx  CsvPreviewModal.tsx  Dashboard.tsx  DataExplorer.tsx  DataTable.tsx  DeviceForm.tsx  DeviceList.tsx  DeviceModelManagement.tsx  DevicePortAssignments.tsx  DeviceRolesPanel.tsx  DevicesPage.tsx  DhcpOptions.tsx  DialogActions.tsx  Discovery.tsx  Drawer.tsx  DropdownSelect.tsx  EditTemplateDialog.tsx  ErrorBoundary.tsx  FormDialog.tsx  FormField.tsx  GroupManagement.tsx  HelpTour.tsx  Icon.tsx  IconButton.tsx  InfoSection.tsx  IpamManagement.tsx  (+40 more)
frontend/src/context/: LayoutContext.tsx  index.ts
frr-client/: Dockerfile  daemons  entrypoint.sh  show_config.sh
gobgp-client/: Dockerfile  entrypoint.sh  show_config.sh
k8s/: README.md
k8s/base/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml
mobile/: App.tsx  BUILD.bazel  README.md  app.json  package-lock.json  package.json
mobile/src/: setup.ts  tokenStorage.ts
mobile/src/components/: DeviceActionsModal.tsx  DeviceCard.tsx  DeviceFormFields.tsx  FormSelect.tsx  Logo.tsx
mobile/src/navigation/: AppNavigator.tsx  types.ts
mobile/src/screens/: ActionsScreen.tsx  CredentialsScreen.tsx  DataExplorerScreen.tsx  DeviceFormScreen.tsx  DeviceModelsScreen.tsx  DevicesHubScreen.tsx  DevicesScreen.tsx  DhcpOptionsScreen.tsx  DiscoveryScreen.tsx  GroupsScreen.tsx  InspectorScreen.tsx  IpamScreen.tsx  JobsScreen.tsx  LocationsScreen.tsx  LoginScreen.tsx  ScannerScreen.tsx  TemplatesScreen.tsx  TestContainersScreen.tsx  TopologiesScreen.tsx  VariablesScreen.tsx  VendorsScreen.tsx  index.ts
native-data/: dnsmasq.conf  ztp.db
scripts/: build-clos-lab.sh  test-openapi.sh  workspace_status.sh
shared/: node_modules
shared/core/: index.ts  types.ts
shared/core/constants/: defaults.ts  hardware.ts  index.ts  switch-models.ts
shared/core/hooks/: index.ts  useApiHistory.ts  useAuth.ts  useBackups.ts  useCredentials.ts  useDeviceModels.ts  useDeviceRoles.ts  useDeviceVariables.ts  useDevices.ts  useDhcpOptions.ts  useDiscovery.ts  useGpuClusters.ts  useGroups.ts  useInflight.ts  useIpam.ts  useJobTemplates.ts  useJobs.ts  useLocalSettings.ts  useLocalStorage.ts  useModalForm.ts  (+19 more)
test-client/: entrypoint.sh
(+64 files in other folders)
