[package]
name = "ztp-server"
version = "0.1.0"
edition = "2021"
authors = ["ZTP Server Team"]
description = "Zero Touch Provisioning Server - Rust Backend"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# SSH - using ssh2 for stable Rust compatibility
ssh2 = "0.9"
async-trait = "0.1"

# WebSocket
futures = "0.3"
futures-util = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# File watching
notify = "6"

# HTTP client (for NetBox)
reqwest = { version = "0.11", features = ["json"] }

# Template rendering
tera = "1"

# Process management
nix = { version = "0.28", features = ["signal", "process"] }

# Regex for template conversion
regex-lite = "0.1"

# Docker client (for test container management)
bollard = "0.16"

# Random bytes for MAC generation
rand = "0.8"

# Tar archive creation (for injecting configs into containers)
tar = "0.4"

# JWT authentication
jsonwebtoken = "9"

# Password hashing
bcrypt = "0.15"

[dev-dependencies]
tokio-test = "0.4"
