# =============================================================
# mobile/BUILD.bazel
#
# React Native / Expo mobile app.
#
# Actual mobile builds go through EAS (Expo Application Services)
# or `expo run:ios` / `expo run:android`. Bazel can't fully own
# that pipeline since it involves Xcode/Gradle, code signing, etc.
#
# What Bazel DOES own here:
#   - TypeScript type-checking (catches errors before EAS build)
#   - Dependency on //shared/core (ensures shared code compiles)
#
# Targets:
#   bazel test //mobile:typecheck    TypeScript validation
# =============================================================

load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm_mobile//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

exports_files([
    "tsconfig.json",
    "pnpm-lock.yaml",
])

ts_project(
    name = "typecheck",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
        "App.tsx",
        "index.ts",
    ]),
    tsconfig = ":tsconfig.json",
    no_emit = True,
    deps = [
        # Shared core module
        "//shared/core",

        # npm dependencies — only what's needed for type-checking
        ":node_modules/react",
        ":node_modules/react-native",
        ":node_modules/expo",
        ":node_modules/expo-camera",
        ":node_modules/expo-status-bar",
        ":node_modules/react-redux",
        ":node_modules/@reduxjs/toolkit",
        ":node_modules/@react-navigation/native",
        ":node_modules/@react-navigation/native-stack",
        ":node_modules/@react-navigation/bottom-tabs",
        ":node_modules/@react-native-async-storage/async-storage",
        ":node_modules/@react-native-picker/picker",
        ":node_modules/react-native-safe-area-context",
        ":node_modules/react-native-screens",
        ":node_modules/react-native-svg",
        ":node_modules/@types/react",
    ],
    tags = ["typecheck"],
)
