# =============================================================
# frontend/BUILD.bazel
#
# React + Vite frontend application.
#
# Targets:
#   bazel build //frontend:bundle       Production Vite build (dist/)
#   bazel test  //frontend:typecheck    TypeScript type-check
#   bazel run   //frontend:dev          Vite dev server (local only)
# =============================================================

load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_run_binary", "js_binary")
load("@npm_frontend//:defs.bzl", "npm_link_all_packages")

# Link all npm packages from the lockfile into this package
npm_link_all_packages(name = "node_modules")

exports_files([
    "tsconfig.json",
    "vite.config.ts",
    "index.html",
    "pnpm-lock.yaml",
])

# ---- Static assets (CSS, images, public/) ----

filegroup(
    name = "static_assets",
    srcs = glob([
        "src/**/*.css",
        "src/**/*.svg",
        "src/**/*.png",
        "public/**",
    ]),
)

# ---- TypeScript compilation ----
#
# The @core path alias (-> ../shared/core) is handled by declaring
# //shared/core as a dep. Bazel resolves it through the dependency
# graph rather than filesystem path aliases.

ts_project(
    name = "app",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]),
    declaration = True,
    tsconfig = ":tsconfig.json",
    # resolve_json_module = True,  # Uncomment if importing .json files
    deps = [
        # Shared core module (replaces the @core path alias)
        "//shared/core",

        # npm dependencies
        ":node_modules/react",
        ":node_modules/react-dom",
        ":node_modules/react-redux",
        ":node_modules/@reduxjs/toolkit",
        ":node_modules/qrcode",

        # Type definitions
        ":node_modules/@types/react",
        ":node_modules/@types/react-dom",
    ],
    visibility = ["//visibility:public"],
)

# ---- Type-check only (no JS emit) ----
# Faster than a full build — useful in CI presubmit checks.

ts_project(
    name = "typecheck",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]),
    tsconfig = ":tsconfig.json",
    no_emit = True,
    deps = [
        "//shared/core",
        ":node_modules/react",
        ":node_modules/react-dom",
        ":node_modules/react-redux",
        ":node_modules/@reduxjs/toolkit",
        ":node_modules/qrcode",
        ":node_modules/@types/react",
        ":node_modules/@types/react-dom",
    ],
    tags = ["typecheck"],
)

# ---- Vite production build ----
#
# Runs `vite build` to produce the optimized dist/ bundle.
# The output is a tree artifact (directory) containing index.html,
# JS chunks, CSS, and other assets.

js_binary(
    name = "vite_bin",
    entry_point = ":node_modules/.aspect_rules_js/vite/bin/vite.js",
    data = [
        ":node_modules/vite",
        ":node_modules/@vitejs/plugin-react",
    ],
)

js_run_binary(
    name = "bundle",
    tool = ":vite_bin",
    args = ["build"],
    srcs = [
        ":app",
        ":static_assets",
        "vite.config.ts",
        "index.html",
    ],
    out_dirs = ["dist"],
    chdir = package_name(),
    # Vite needs to resolve node_modules at build time
    env = {
        "NODE_ENV": "production",
    },
    visibility = ["//visibility:public"],
)

# ---- Dev server (local development only) ----
# Not used in CI. Provides HMR, API proxy, etc.
# Usage: bazel run //frontend:dev

js_binary(
    name = "dev",
    entry_point = ":node_modules/.aspect_rules_js/vite/bin/vite.js",
    args = [
        "--host",
        "0.0.0.0",
    ],
    data = [
        ":app",
        ":static_assets",
        ":node_modules/vite",
        ":node_modules/@vitejs/plugin-react",
        "vite.config.ts",
        "index.html",
    ],
    chdir = package_name(),
    tags = ["no-remote"],  # Always run locally
)
